# placed in a sub directory since the top directory is problematic for old setuptools and legacy python

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandaharvester"
dynamic = ["version"]
description = "Harvester Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "PanDA Team", email = "panda-support@cern.ch" },
]

dependencies = [
    'requests',
    'python-daemon',
    'pycryptodomex',
    'panda-common >= 0.1.1',
    'pyjwt',
    'rpyc',
    'paramiko',
    'pexpect',
    'psutil >= 5.4.8',
    'panda-pilot >= 2.7.2.1',
]

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
kubernetes = ['kubernetes', 'pyyaml']
mysql = ['mysqlclient']
atlasgrid = ['uWSGI >= 2.0.20', 'htcondor >= 10.3.0', 'mysqlclient >= 2.1.1']

[project.urls]
Homepage = "https://github.com/PanDAWMS/panda-harvester/wiki"

[tool.hatch.version]
path = "pandaharvester/panda_pkg_info.py"
pattern = "release_version = \"(?P<version>[^\"]+)\""

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["pandaharvester"]

[tool.hatch.build.targets.wheel.shared-data]
"templates/panda" = "etc/panda"
"templates/sysconfig" = "etc/sysconfig"
"templates/init.d" = "etc/rc.d/init.d"
"templates/systemd" = "etc/systemd/system"
"templates/logrotate.d" = "etc/logrotate.d"
"templates/bin" = "local/bin"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "package/hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".idea",
]

[tool.black]
line-length=160

[tool.autopep8]
# https://pypi.org/project/autopep8/#pyproject-toml
max_line_length = 160
ignore = ["E203", "E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.isort]
profile = "black"

[tool.flynt]
line-length = 160